yaml/me-add-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: me-add-two-deployment
  labels:
    app: me-add-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: me-add-two
  template:
    metadata:
      labels:
        app: me-add-two
    spec:
      containers:
      - name: me-add-two-main
        image: me-add-two:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5012
---
apiVersion: v1
kind: Service
metadata:
  name: me-add-two-service
spec:
  type: NodePort
  selector:
    app: me-add-two
  ports:
    - port: 5012
      nodePort: 30012
